examples/test/testpolicy1137.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1137
  namespace: namespace455
spec:
  podSelector:
    matchLabels:
      key8: value8
      key2: value32
      key14: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value20
      podSelector:
        matchLabels:
          key36: value20
          key38: value38
          key43: value48
